bise/diazotheme/static/css/main.css
/* ... */
.search-submit i,
.search-label i {
  font-size: inherit;
}

.search-label,
.search-submit {
  border: 1px solid rgba(255, 255, 255, 0.1);
  box-sizing: border-box;
  width: 3rem;
  text-align: center;
  background: rgba(0, 130, 50, 0.3);
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  display: flex;
  justify-content: center;
}

.search-label {
  position: relative;
  z-index: 100;
  border: none;
  background: none!important;
  height: 34px;
}

#navbar .search-field {
  width: 3rem;
  height: calc(3rem + 4px);
  position: absolute;
  overflow: hidden;
  top: 0;
  right: 0;
  transition: width .1s;
}

.search.open .search-label {
  z-index: 0;
}

.search.open .search-field {
  width: 200px!important;
}

.search i {
  color: white;
}

@media (max-width: 800px) {
  .search {
    float: right;
  }
  .search-label {
    background: rgba(0, 0, 0, 0.01);
  }
  .search-submit {
    background: rgba(0, 0, 0, 0.01);
    border-radius: 5px;
    border: 1px solid rgba(255, 255, 255, 0.1);
  }
  .login-wrapper {
    border: 1px solid rgba(255, 255, 255, 0.01)!important;
    border-radius: 5px;
    background: none;
  }
  .login-wrapper a:after {
    right: auto!important;
    float: none!important;
  }
}

@media (min-width: 800px) {
  .aside-wrapper {
    margin-top: -230px;
  }
  .template-compose .aside-wrapper {
    margin-top: 0;
  }
}

@media print {
  .aside-wrapper,
  .section-wrapper {
    float: none!important;
  }
}


/* Forms */

#buttons-save,
#buttons-cancel {
  display: inline-block;
  padding: 0.4em 0.6em;
  border-radius: 0.3em;
  text-align: center;
  min-width: 5rem;
  font-weight: 500;
  border: 1px solid transparent;
  background-clip: border-box;
}

#buttons-save {
  background: #ffc612 linear-gradient(#f4d13b, #f4b331) no-repeat;
  color: #222;
  text-shadow: 0 1px 0 #f4d13b;
}

#buttons-cancel {
  background: #f7f4ed linear-gradient(#f7f4ed, #e5dfd1) no-repeat;
  color: #444;
  text-shadow: 0 1px 0 #e5dfd1;
}

form .field {
  padding: 1rem;
  border-radius: 1rem;
  background: #eaeaea;
}

tr.mceFirst {
  background: white!important;
}

.ploneSkin table.mceLayout td.mceToolbar {
  border: 1px solid #eee!important;
  padding: .5rem;
}

.mceLayout tbody {
  background: white!important;
}

.ploneSkin .mceIframeContainer {
  border-color: #eee!important;
  padding: .5rem;
}

.ploneSkin table.mceLayout td.mceStatusbar {
  border-color: #eee!important;
  padding: .5rem;
}

.selectivity-multiple-input-container {
  background: white;
}

.section-search #viewlet-below-content-title {
  margin-left: 4rem;
}

.facet-input + label:before {
  text-align: center;
}

.facet-input:checked + label:before {
  content: "\f00c";
  margin-right: .5rem;
}

.facet-toggle {
  font-size: 2rem!important;
}

.catalogue-container ol {
  margin-left: 0!important;
  margin-top: 0!important;
}

@media (max-width: 799px) {
  #catalogue-app .catalogue-libraries ul {
    display: flex!important;
    flex-direction: row;
    overflow-x: auto;
    width: 100%;
  }
  .catalogue-libraries {
    overflow: hidden!important;
  }
  .catalogue-libraries .count {
    bottom: 0!important;
  }
}

.selectivity-dropdown:nth-child(n+3) {
  top: 47.5%!important;
  max-width: 300px!important;
}

.selectivity-dropdown {
  z-index: 105;
  max-width: 35%!important;
}

.selectivity-dropdown > .selectivity-results-container > .selectivity-result-item {
  font-weight: 600;
}

.selectivity-dropdown:nth-child(n+3) > .selectivity-results-container > .selectivity-result-item {
  font-weight: 400!important;
}

.selectivity-multiple-input-container input {
  width: auto!important;
}

.selectivity-multiple-input-container {
  background: white!important;
  border: 1px solid #aaa;
}

.cover-elasticsearchlisting-tile.tile-content a.externalLink {
  display: block;
  padding: .2rem;
}

dl.portalMessage dt,
div > .admonition-title {
  background-color: #0d9e05;
}

.portalMessage.error dd {
  color: #474646;
}

.edit-tile-link.link-overlay {
  font-size: 1.2rem;
  padding: .2rem;
  top: -0.9rem !important;
  background: #41b664;
  border-radius: 3px;
  left: 0px;
  color: white;
}

#personalbar-options {
  list-style: none;
  padding-left: 0;
}
#personalbar-options li {
  display: inline;
}

.search-image img {
  width: 18px;
  height: 18px;
}

.search-image {
  display: flex;
  align-items: center;
  justify-content: center;
}

.selected-item {
  color: #aaa;
}

@media print {
  #navbar,
  .asidetrigger,
  #site-footer,
  #highlights-slider img,
  input,
  select,
  textarea {
    display: none;
  }
  .template-pdf-cover #portal-breadcrumbs {
    display: block!important;
  }
  .template-pdf-cover #portal-breadcrumbs a:after {
    content: ''!important;
  }
/*  #portal-breadcrumbs {
    display: block!important;
  }
  #portal-breadcrumbs a:after {
    content: ''!important;
  }*/
  a:after {
    /*content: " (" attr(href) ") "!important;*/
    font-size: 0.8em;
    font-weight: normal;
    display: inline!important;
  }
  a {
    text-decoration: underline!important;
    border-bottom: none!important;
  }
  .news-world,
  .news-europe {
    page-break-before: avoid;
  }
  main {
    float: none!important;
    left: 0!important;
    width: auto!important;
    height: auto;
    position: static!important;
  }
  aside {
    display: none!important;
  }
}




.modal-container {
    transform: translate3d(200%, 0,0);
       transition: transform 350ms;
    position: fixed;
    top: 0;
    bottom: 0;
    background: white;
    z-index: 999;
    box-sizing: border-box;
    box-shadow: 1px 1px 3px darkgrey;
    overflow: auto;
        width: 75vw;
    right: 0;
    padding: 1rem;
}


.modal-container.open {
  transform: translate3d(0,0,0);
}


.close-dialog {
      position: absolute;
    top: 0;
    left: 0;
    margin-bottom: .4rem;
    border-radius: 0;
    border: none;
    background: none;
}

.modal-content {
margin: 1rem;
}
/* ... */

